@@ -1,19 +1,13 @@
 package org.nessus.model.tecton;
 
-import org.nessus.controller.IRandomProvider;
-import org.nessus.controller.ITectonController;
+import org.nessus.controller.*;
 import org.nessus.model.bug.Bug;
-import org.nessus.model.shroom.Shroom;
-import org.nessus.model.shroom.ShroomBody;
-import org.nessus.model.shroom.ShroomThread;
-import org.nessus.model.shroom.Spore;
+import org.nessus.model.shroom.*;
 import org.nessus.view.View;
 
-import java.lang.classfile.ClassFile.Option;
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
-import java.util.Optional;
-import java.util.Random;
 
 /**
  * A tektonokat reprezentáló osztály.
@@ -27,10 +21,10 @@ import java.util.Random;
  */
 public class Tecton implements ITectonController {
     protected List<Tecton> neighbours = new ArrayList<>(); // A szomszédos tektonok listája
-    protected List<Spore> spores = new ArrayList<>(); // A tektonon található spórák listája
-    protected List<ShroomThread> shroomThreads = new ArrayList<>(); // A tektonon található gombafonalak listája
+    protected ShroomBody body = null; // A tektonon található gombatest
+    protected List<ShroomThread> threads = new ArrayList<>(); // A tektonon található gombafonalak listája
     protected List<Bug> bugs = new ArrayList<>(); // A tektonon található rovarok listája
-    protected ShroomBody shroomBody = null; // A tektonon található gombatest
+    protected List<Spore> spores = new ArrayList<>(); // A tektonon található spórák listája
 
     /**
      * Törés közben a tekton szomszédos tektonjaira átkerülnek a rovarok és spórák.
@@ -38,6 +32,7 @@ public class Tecton implements ITectonController {
      * @param copyTecton
      */
     protected void SpreadEntities(Tecton copyTecton) {
+        copyTecton.SetNeighbour(this);
         for (Tecton neighbour : neighbours) {
             copyTecton.neighbours.add(neighbour);
             neighbour.neighbours.add(copyTecton);
@@ -45,35 +40,40 @@ public class Tecton implements ITectonController {
 
         neighbours.add(copyTecton);
 
-        // TODO Use random provider
         IRandomProvider randProvider = View.GetObjectStore().GetRandomProvider();
 
-        for (Bug bug : bugs) {
+        Iterator<Bug> bugIterator = bugs.iterator();
+        while (bugIterator.hasNext()) {
+            Bug bug = bugIterator.next();
             boolean transferBug = randProvider.RandomBoolean();
+            System.out.println("átrakás: "+ transferBug);
             if (transferBug) {
                 copyTecton.AddBug(bug);
                 bug.SetTecton(copyTecton);
-                bugs.remove(bug);
+                bugIterator.remove();
             }
         }
 
-        for (Spore spore : spores) {
+        Iterator<Spore> sporeIterator = spores.iterator();
+        while (sporeIterator.hasNext()) {
+            Spore spore = sporeIterator.next();
             boolean transferSpore = randProvider.RandomBoolean();
             if (transferSpore) {
                 copyTecton.ThrowSpore(spore);
                 spore.SetTecton(copyTecton);
-                spores.remove(spore);
+                sporeIterator.remove();
             }
         }
 
-        if (this.shroomBody != null) {
+        if (this.body != null) {
             boolean transferShroomBody = randProvider.RandomBoolean();
-            if(transferShroomBody) {
-                copyTecton.SetShroomBody(shroomBody);
-                shroomBody.SetTecton(copyTecton);
+            if (transferShroomBody) {
+                copyTecton.SetShroomBody(body);
+                body.SetTecton(copyTecton);
                 this.ClearShroomBody();
             }
         }
+
     }
 
     /**
@@ -85,10 +85,10 @@ public class Tecton implements ITectonController {
     public void Split() {
         Tecton copyTecton = Copy();
         SpreadEntities(copyTecton);
-        View.GetObjectStore().AddObject("copyTecton", copyTecton);
+        View.GetObjectStore().AddObjectWithNameGen("tecton", copyTecton);
 
         //Konkurens Módosítás Kivétel elkerülése érdekében másolat
-        List.copyOf(shroomThreads).forEach(ShroomThread::Remove);
+        List.copyOf(threads).forEach(ShroomThread::Remove);
     }
 
     /**
@@ -97,7 +97,7 @@ public class Tecton implements ITectonController {
      * @return Boolean - Sikeres volt-e a növesztés
      */
     public boolean GrowShroomThread(ShroomThread thread) {
-        shroomThreads.add(thread);
+        threads.add(thread);
         return true;
     }
 
@@ -107,7 +107,7 @@ public class Tecton implements ITectonController {
      * @return void
      */
     public void RemoveShroomThread(ShroomThread thread) {
-        shroomThreads.remove(thread);
+        threads.remove(thread);
     }
 
     /**
@@ -117,7 +117,7 @@ public class Tecton implements ITectonController {
      * @return Boolean - Sikeres volt-e a növesztés
      */
     public boolean GrowShroomBody(ShroomBody body) {
-        if (shroomBody != null)
+        if (this.body != null)
             return false;
 
         var usableSpores = spores.stream()
@@ -127,10 +127,10 @@ public class Tecton implements ITectonController {
         if (usableSpores.size() < 2)
             return false;
         
-        var spore = usableSpores.getFirst();
+        var spore = usableSpores.get(0);
         RemoveSpore(spore);
         
-        shroomBody = body;
+        this.body = body;
         body.SetTecton(this);
 
         return true;
@@ -142,14 +142,14 @@ public class Tecton implements ITectonController {
      * @return void
      */
     public void SetShroomBody(ShroomBody body) {
-        shroomBody = body;
+        this.body = body;
     }
 
     /**
      * Gombatest eltávolítása a tektonról.
      */
     public void ClearShroomBody() {
-        shroomBody = null;
+        body = null;
     }
 
     /**
@@ -158,7 +158,7 @@ public class Tecton implements ITectonController {
      * @return ShroomBody - A tektonon található gombatest
      */
     public ShroomBody GetShroomBody() {
-        return shroomBody;
+        return body;
     }
 
     /**
@@ -212,9 +212,7 @@ public class Tecton implements ITectonController {
      * @return Tecton - A másolat
      */
     public Tecton Copy() {
-        Tecton copyTecton = new Tecton();
-        View.GetObjectStore().AddObject( "copyTecton", copyTecton);
-        return copyTecton;
+        return new Tecton();
     }
 
     /**
@@ -223,7 +221,7 @@ public class Tecton implements ITectonController {
      * @return Boolean - Szomszédos-e a két tekton
      */
     public boolean HasGrownShroomThreadTo(Tecton tecton) {
-        for (ShroomThread shroomThread : shroomThreads) {
+        for (ShroomThread shroomThread : threads) {
             if (shroomThread.IsTectonReachable(tecton)) {
                 return true;
             }
@@ -238,7 +236,7 @@ public class Tecton implements ITectonController {
      * @return List<ShroomThread> - A tektonon található gombafonalak listája
      */
     public List<ShroomThread> GetShroomThreads() {
-        return shroomThreads;
+        return threads;
     }
 
     /**
@@ -294,7 +292,7 @@ public class Tecton implements ITectonController {
      * @return Boolean - Tartalmaz-e a tekton adott gombafonalat
      */
     public boolean ContainsThread(ShroomThread thread) {
-        return shroomThreads.contains(thread);
+        return threads.contains(thread);
     }
 
     /**
@@ -302,6 +300,6 @@ public class Tecton implements ITectonController {
      * @return List<ShroomBody> - A tektonon található gombatestek listája
      */
     public List<ShroomThread> GetThreads() {
-        return shroomThreads;
+        return threads;
     }
 }
